--- a/src/app/modules/peliculas/detalle-busqueda/detalle-busqueda.component.scss
+++ b/src/app/modules/peliculas/detalle-busqueda/detalle-busqueda.component.scss
@@ -91,10 +91,36 @@
     color: #888;
 }
 
+/* Estilo para el contenedor */
+.searchContainer {
+    width: 100%;
+    height: 8vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Estilo para el botón */
+.search-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    color: gray;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    position: absolute;
+    right: 120px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
 @media (min-width: 1368px) and (min-height: 768px) {
     .container-d {
-
         padding: 0% 0%;
+    }
+
+    .search-button {
+        right: 80px;
     }
 }
 
@@ -102,10 +128,16 @@
     .container-d {
         padding: 0% 0%;
     }
+    .search-button {
+        right: 130px;
+    }
 }
 
 @media screen and (max-width: 768px) {
     .container-d {
         padding: 0% 2%;
+    }
+    .search-button {
+        right: 115px;
     }
 }
