--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,33 @@ body {
     --secondary-color: #1A9BAF;
     --paginator-hover-color: #393b3b;
 }
+
+/* Estilo para el formulario */
+.search-form {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-direction: column;
+}
+
+/* Estilo para el label */
+.label {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+}
+
+/* Estilo para el campo de búsqueda */
+.search-input {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 72%;
+    padding-right: 40px;
+}
+
+
+.fa-search:hover {
+    color: var(--secondary-color);
+}
